--- a/deployment/configmap.yaml
+++ b/deployment/configmap.yaml
@@ -13,7 +13,7 @@ data:
         volumeMounts:
           - name: nginx-conf
             mountPath: /etc/nginx
-    vloumes:
+    volumes:
       - name: nginx-conf
         configMap:
           name: nginx-configmap
