Workaround for missing of server-side defaulting.

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -40,3 +40,8 @@
 [prune]
   go-tests = true
   unused-packages = true
+
+# Fix: vendor/k8s.io/kubernetes/pkg/util/parsers/parsers.go:36:16: undefined: reference.ParseNormalizedNamed
+[[override]]
+  name = "github.com/docker/distribution"
+  branch = "master"
