validating webhook example

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 *.dll
 *.so
 *.dylib
+.idea
 
 # Test binary, build with `go test -c`
 *.test
@@ -11,3 +12,6 @@
 *.out
 
 vendor/*
+
+deployment/mutatingwebhook-ca-bundle.yaml
+deployment/validatingwebhook-ca-bundle.yaml
