--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -1,41 +1,18 @@
-# Gopkg.toml example
-#
-# Refer to https://golang.github.io/dep/docs/Gopkg.toml.html
-# for detailed Gopkg.toml documentation.
-#
-# required = ["github.com/user/thing/cmd/thing"]
-# ignored = ["github.com/user/project/pkgX", "bitbucket.org/user/project/pkgA/pkgY"]
-#
-# [[constraint]]
-#   name = "github.com/user/project"
-#   version = "1.0.0"
-#
-# [[constraint]]
-#   name = "github.com/user/project2"
-#   branch = "dev"
-#   source = "github.com/myfork/project2"
-#
-# [[override]]
-#   name = "github.com/x/y"
-#   version = "2.4.0"
-#
-# [prune]
-#   non-go = false
-#   go-tests = true
-#   unused-packages = true
-
-
 [[constraint]]
   branch = "master"
   name = "github.com/golang/glog"
 
 [[constraint]]
   name = "k8s.io/api"
-  branch = "release-1.9"
+  branch = "release-1.10"
+
+[[constraint]]
+  name = "k8s.io/kubernetes"
+  branch = "release-1.10"
 
 [[constraint]]
   name = "k8s.io/apimachinery"
-  branch = "release-1.9"
+  branch = "release-1.10"
 
 [prune]
   go-tests = true
@@ -45,3 +22,21 @@
 [[override]]
   name = "github.com/docker/distribution"
   branch = "master"
+
+# Fix: vendor/k8s.io/apimachinery/pkg/runtime/serializer/json/json.go:109:16: unknown field 'CaseSensitive' in struct literal of type jsoniter.Config
+# https://github.com/kubernetes/apimachinery/issues/46
+[[override]]
+  name = "github.com/json-iterator/go"
+  revision = "f2b4162afba35581b6d4a50d3b8f34e33c144682"
+
+[[override]]
+  name = "k8s.io/apiextensions-apiserver"
+  branch = "release-1.10"
+
+[[override]]
+  name = "k8s.io/apiserver"
+  branch = "release-1.10"
+
+[[constraint]]
+  name = "k8s.io/client-go"
+  version = "7.0.0"
