--- a/build
+++ b/build
@@ -1,6 +1,10 @@
-dep ensure
-CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o kube-mutating-webhook-tutorial .
-docker build --no-cache -t morvencao/sidecar-injector:v1 .
-rm -rf kube-mutating-webhook-tutorial
+#!/bin/bash
 
-docker push morvencao/sidecar-injector:v1
+: ${DOCKER_USER:? required}
+
+dep ensure -v
+CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o admission-webhook-example 
+docker build --no-cache -t martonsereg/admission-webhook-example:v1 .
+rm -rf admission-webhook-example
+
+docker push ${DOCKER_USER}/admission-webhook-example:v1
