--- a/deployment/service.yaml
+++ b/deployment/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: sidecar-injector-webhook-svc
+  name: admission-webhook-example-svc
   labels:
-    app: sidecar-injector
+    app: admission-webhook-example
 spec:
   ports:
   - port: 443
     targetPort: 443
   selector:
-    app: sidecar-injector
+    app: admission-webhook-example
