minor changes in validation

--- a/build
+++ b/build
@@ -4,7 +4,7 @@
 
 dep ensure -v
 CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o admission-webhook-example 
-docker build --no-cache -t martonsereg/admission-webhook-example:v1 .
+docker build --no-cache -t ${DOCKER_USER}/admission-webhook-example:v1 .
 rm -rf admission-webhook-example
 
 docker push ${DOCKER_USER}/admission-webhook-example:v1
