--- a/deployment/configmap.yaml
+++ b/deployment/configmap.yaml
@@ -2,18 +2,19 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: sidecar-injector-webhook-configmap
+  namespace: sidecar-injector
 data:
   sidecarconfig.yaml: |
     containers:
-      - name: sidecar-nginx
-        image: nginx:1.12.2
-        imagePullPolicy: IfNotPresent
-        ports:
-          - containerPort: 80
-        volumeMounts:
-          - name: nginx-conf
-            mountPath: /etc/nginx
-    volumes:
+    - name: sidecar-nginx
+      image: nginx:1.12.2
+      imagePullPolicy: IfNotPresent
+      ports:
+      - containerPort: 80
+      volumeMounts:
       - name: nginx-conf
-        configMap:
-          name: nginx-configmap
+        mountPath: /etc/nginx
+    volumes:
+    - name: nginx-conf
+      configMap:
+        name: nginx-configmap
