--- a/deployment/nginxconfigmap.yaml
+++ b/deployment/nginxconfigmap.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: nginx-configmap
+  namespace: sidecar-injector
 data:
   nginx.conf: |
     worker_processes  1;
