--- a/deployment/service.yaml
+++ b/deployment/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: sidecar-injector-webhook-svc
+  namespace: sidecar-injector
   labels:
     app: sidecar-injector
 spec:
