self generate certificate.
Signed-off-by: morvencao <lcao@redhat.com>

--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: sidecar-injector-webhook-deployment
+  name: sidecar-injector-webhook
   namespace: sidecar-injector
   labels:
     app: sidecar-injector
@@ -15,27 +15,29 @@ spec:
       labels:
         app: sidecar-injector
     spec:
+      serviceAccountName: sidecar-injector-webhook
       containers:
-        - name: sidecar-injector
-          image: morvencao/sidecar-injector:latest
-          imagePullPolicy: IfNotPresent
-          args:
-          - -sidecarCfgFile=/etc/webhook/config/sidecarconfig.yaml
-          - -tlsCertFile=/etc/webhook/certs/cert.pem
-          - -tlsKeyFile=/etc/webhook/certs/key.pem
-          - -alsologtostderr
-          - -v=4
-          - 2>&1
-          volumeMounts:
-          - name: webhook-certs
-            mountPath: /etc/webhook/certs
-            readOnly: true
-          - name: webhook-config
-            mountPath: /etc/webhook/config
+      - name: webhook-sidecar-injector
+        image: quay.io/morvencao/sidecar-injector:latest
+        imagePullPolicy: Always
+        env:
+        - name: POD_NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
+        args:
+        - -service-name=sidecar-injector-webhook
+        - -sidecarCfgFile=/etc/webhook/config/sidecarconfig.yaml
+        # - -tlsCertFile=/etc/webhook/certs/cert.pem
+        # - -tlsKeyFile=/etc/webhook/certs/key.pem
+        - -alsologtostderr
+        - -v=4
+        - 2>&1
+        volumeMounts:
+        - name: webhook-config
+          mountPath: /etc/webhook/config
       volumes:
-      - name: webhook-certs
-        secret:
-          secretName: sidecar-injector-webhook-certs
       - name: webhook-config
         configMap:
-          name: sidecar-injector-webhook-configmap
+          name: sidecar-injector-webhook
+
