--- a/deploy/service.yaml
+++ b/deploy/service.yaml
@@ -1,8 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: sidecar-injector-webhook-svc
-  namespace: sidecar-injector
+  name: sidecar-injector
   labels:
     app: sidecar-injector
 spec:
