--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -27,6 +27,10 @@ spec:
             valueFrom:
               fieldRef:
                 fieldPath: metadata.namespace
+          lifecycle:
+            preStop:
+              exec:
+                command: ["/bin/sh", "-c", "/prestop.sh"]
           volumeMounts:
           - name: webhook-config
             mountPath: /etc/webhook/config
